<?xml version="1.0"?>
<package>
  <name>frenet_planner</name>
  <version>0.0.2</version>
  <description>The Frenet Planner package</description>

  <maintainer email="harshitsikchi8@gmail.com">Harshit Sikchi</maintainer>
  <author email="harshitsikchi8@gmail.com">Harshit Sikchi</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teb_local_planner_tutorials</url>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>stage_ros</run_depend>
  <run_depend>teb_local_planner</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
